---
source: tests/test.rs
expression: diff
info:
  lhs:
    exclusiveMaximum: 100
    minimum: 1
  rhs:
    exclusiveMinimum: 3
    maximum: 30
input_file: tests/fixtures/range/all.json
---
[
    Change {
        path: "",
        change: RangeChange {
            old_value: Minimum(
                1.0,
            ),
            new_value: ExclusiveMinimum(
                3.0,
            ),
        },
    },
    Change {
        path: "",
        change: RangeChange {
            old_value: ExclusiveMaximum(
                100.0,
            ),
            new_value: Maximum(
                30.0,
            ),
        },
    },
]
